fix loading gif placement on mobile

--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -68,14 +68,11 @@
 		}
 	}
 	.loading-gif {
-		display: inline-block;
-		padding: 50px;
-		font-size: 12px;
-		line-height: 50px;
-		text-align: center;
 		position: absolute;
-		top: 30%;
-		left: 46.2%;
+		height: 50px;
+		top: 36%;
+		left: 0;
+		right: 0;
 		background: image-url("dots-loading.gif") center/50px no-repeat;
 		opacity: 0.4;
 	}
